--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://MAK-Jr.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Pitt Mak
+subtitle: Ruby/Rails/Objective-C.
+author: Pitt Mak
 simple_search: http://google.com/search
 description:
 
