--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://MAK-Jr.github.com
-title: Pitt Mak
-subtitle: Ruby/Rails/Objective-C.
-author: Pitt Mak
+title: SHIH-CHUN
+subtitle: Ruby/JavaScript
+author: Shih-Chun
 simple_search: http://google.com/search
 description:
 
